Update Hypr configs

--- a/private_dot_config/hypr/hyprland.conf
+++ b/private_dot_config/hypr/hyprland.conf
@@ -14,299 +14,13 @@
 # | ╚═════╝ ╚═════╝ ╚═╝  ╚═══╝╚═╝     ╚═╝ ╚═════╝                     |
 # +===================================================================+
 
-#############################
-### ENVIRONMENT VARIABLES ###
-#############################
-
-# Toolkits
-env = GDK_BACKEND,wayland,x11,*
-env = QT_QPA_PLATFORM,wayland;xcb
-env = SDL_VIDEODRIVER,wayland
-env = CLUTTER_BACKEND,wayland
-
-# XDG Specs
-env = XDG_CURRENT_DESKTOP,Hyprland
-env = XDG_SESSION_TYPE,wayland
-env = XDG_SESSION_DESKTOP,Hyprland
-
-# Themes
-env = XCURSOR_SIZE,24
-env = HYPRCURSOR_SIZE,24
-env = QT_QPA_PLATFORMTHEME,qt5ct
-env = QT_QPA_PLATFORMTHEME,qt6ct
-
-# SSH
-env = SSH_AUTH_SOCK,$XDG_RUNTIME_DIR/ssh-agent.socket
-
-# Nvidia
-env = GBV_BACKEND,nvidia-drm
-env = __GLX_VENDOR_LIBRARY_NAME,nvidia
-env = LIBVA_DRIVER_NAME,nvidia
-env = NVD_BACKEND,direct
-env = __GL_GSYNC_ALLOWED,1
-env = __GL_VRR_ALLOWED,1
-
-################
-### MONITORS ###
-################
-#monitor= DP-1, 3440x1440@165, 0x0, 1,bitdepth,10,cm,auto
-monitor= DP-1, 3440x1440@165, 0x0, 1
-monitor= HEADLESS-2, 2732x2048@120, 19200x0,2
-
-###################
-###  PROGRAMS   ###
-###################
-
-$META = SUPER
-$terminal = kitty
-$fileManager = kitty -e lf
-$menu = rofi -show
-$browser = firefox
-
-#################
-### AUTOSTART ###
-#################
-
-# Wallpaper
-exec-once = swww-daemon
-exec-once = $HOME/.local/bin/scripts/swwwslideshow.sh ~/Pictures/Wallpapers
-##
-
-# Clipboard
-exec-once = wl-paste --type text --watch cliphist store # Stores only text data
-exec-once = wl-paste --type image --watch cliphist store # Stores only image data
-##
-
-# SystemD
-exec-once = systemctl --user start sunshine
-exec-once = systemctl --user start hyprpolkitagent
-##
-
-# Applications
-exec-once = nm-applet
-exec-once = mako
-exec-once = blueman-applet
-exec-once = waybar -c ~/.config/waybar/config.jsonc
-exec-once = discord
-exec-once = steam
-exec-once = [workspace 2 silent] firefox
-exec-once = [workspace 4 silent] fooyin
-exec-once = xrdb ~/.Xresources
-exec-once= /opt/piavpn/bin/pia-client --quiet
-exec-once = pavucontrol --gapplication-service
-##
-
-
-#####################
-### LOOK AND FEEL ###
-#####################
-general {
-    layout = master
-    gaps_in = 5
-    gaps_out = 5
-    border_size = 1
-    col.active_border = rgba(33ccffee) rgba(00ff99ee) 45deg
-    col.inactive_border = rgba(595959aa)
-    resize_on_border = false
-    # allow_tearing = true
-}
-
-ecosystem {
-    no_update_news = true
-    no_donation_nag = true
-  }
-
-decoration {
-    rounding = 10
-    active_opacity = 1.0
-    inactive_opacity = 1.0
-    blur {
-        enabled = true
-        size = 5
-        passes = 5
-        vibrancy = 0.1696
-        special = true
-    }
-  shadow {
-    range = 4
-
-  }
-}
-
-animations {
-    enabled = true
-    bezier = myBezier, 0.05, 0.9, 0.1, 1.05
-    animation = windows, 1, 7, myBezier
-    animation = windowsOut, 1, 7, default, popin 80%
-    animation = border, 1, 10, default
-    animation = borderangle, 1, 8, default
-    animation = fade, 1, 7, default
-    animation = workspaces, 1, 6, default
-}
-
-master {
-    new_status = master
-    allow_small_split = false
-    special_scale_factor = 1
-    mfact = 0.5
-    new_status = master
-    new_on_top = false
-    new_on_active = none
-    orientation = left
-    inherit_fullscreen = true
-    smart_resizing = true
-    drop_at_cursor = true
-}
-
-render {
-  cm_fs_passthrough = 2
-}
-
-experimental {
-    xx_color_management_v4 = true
-  }
-
-# Master-Layout Binds
-binde = $META, j, layoutmsg, cyclenext
-binde = $META, k, layoutmsg, cycleprev
-binde = $META, RETURN, layoutmsg, swapwithmaster master
-binde = $META, M, fullscreen
-
-misc {
-    vrr = 2  # [2] Set vrr to fullscreen only [1] Set vrr to always on [0] Set vrr to off
-    enable_swallow = true
-    swallow_regex = ^(Alacritty|kitty|foot|ghostty)$
-}
-
-cursor {
-    # hide_on_key_press = true
-    inactive_timeout = 3
-  }
-
-debug {
-  overlay = false
-}
-
-#############
-### INPUT ###
-#############
-
-input {
-    kb_layout = us
-    repeat_delay = 300
-    repeat_rate = 50
-    follow_mouse = 1
-    sensitivity = 0 # -1.0 - 1.0, 0 means no modification.
-    accel_profile = flat
-    # kb_options = caps:swapescape
-}
-
-gestures {
-    workspace_swipe = false
-}
-
-device {
-}
-
-
-###################
-### KEYBINDINGS ###
-###################
-bind = $META+SHIFT, Return, exec, $terminal # Launch kitty
-bind = $META+SHIFT, C, killactive, # Kill active windows
-bind = $META+SHIFT, Q, exit, # Exit hyprland
-bind = $META, E, exec, $fileManager
-bind = $META+SHIFT, E, exec, dolphin
-bind = $META, V, togglefloating,
-bind = $META, P, exec, $menu # Launch rofi
-bind = $META+SHIFT, f, exec, $browser # Launch firefox
-bind = Control_L+SHIFT, Escape, exec, missioncenter # Launch missioncenter
-# bind = , Print, exec, grim -g "$(slurp)"
-# bind = , Print, exec, grim -g "$(slurp -d)" | wl-copy
-
-# Move focus with META + arrow keys
-bind = $META, left, movefocus, l
-bind = $META, right, movefocus, r
-bind = $META, up, movefocus, u
-bind = $META, down, movefocus, d
-
-# Switch workspaces with META + [0-9]
-bind = $META, 1, workspace, 1
-bind = $META, 2, workspace, 2
-bind = $META, 3, workspace, 3
-bind = $META, 4, workspace, 4
-bind = $META, 5, workspace, 5
-bind = $META, 6, workspace, 6
-bind = $META, 7, workspace, 7
-bind = $META, 8, workspace, 8
-bind = $META, 9, workspace, 9
-bind = $META, 0, workspace, 10
-
-# Move active window to a workspace with META + SHIFT + [0-9]
-bind = $META SHIFT, 1, movetoworkspacesilent, 1
-bind = $META SHIFT, 2, movetoworkspacesilent, 2
-bind = $META SHIFT, 3, movetoworkspacesilent, 3
-bind = $META SHIFT, 4, movetoworkspacesilent, 4
-bind = $META SHIFT, 5, movetoworkspacesilent, 5
-bind = $META SHIFT, 6, movetoworkspacesilent, 6
-bind = $META SHIFT, 7, movetoworkspacesilent, 7
-bind = $META SHIFT, 8, movetoworkspacesilent, 8
-bind = $META SHIFT, 9, movetoworkspacesilent, 9
-bind = $META SHIFT, 0, movetoworkspacesilent, 10
-
-# Resize window
-binde = $META, l, resizeactive, 10 0
-binde = $META, h, resizeactive, -10 0
-
-# Move/resize windows with mainMod + LMB/RMB and dragging    WARNING: Do not delete if you want to be able to resize windows
-bindm = $META, mouse:272, movewindow
-bindm = $META, mouse:273, resizewindow
-
-
-# Example special workspace (scratchpad)
-bind = $META, S, togglespecialworkspace, special:magic
-# bind = $META SHIFT, S, movetoworkspace, special:magic
-
-# Scroll through existing workspaces with META + scroll
-bind = $META, mouse_down, workspace, e+1
-bind = $META, mouse_up, workspace, e-1
-
-# Laptop multimedia keys for volume and LCD brightness
-bindel = ,XF86AudioRaiseVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%+
-bindel = ,XF86AudioLowerVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%-
-bindel = ,XF86AudioMute, exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle
-bindel = ,XF86AudioMicMute, exec, wpctl set-mute @DEFAULT_AUDIO_SOURCE@ toggle
-bindel = ,XF86MonBrightnessUp, exec, brightnessctl s 10%+
-bindel = ,XF86MonBrightnessDown, exec, brightnessctl s 10%-
-
-# Status Bars
-binde = $META, B, exec, killall -SIGUSR1 waybar
-binde = $META+Shift, R, exec, killall waybar && waybar
-
-##############################
-### WINDOWS AND WORKSPACES ###
-##############################
-# Use hyprctl clients to get window names
-windowrule = suppressevent maximize, class:.* # You'll probably like this.
-windowrule = float, class:(zenity), title:(Winetricks)
-windowrule = float, class:(blueman-manager), title:(Bluetooth Devices)
-windowrule = float, class:(xarchiver), title:()
-windowrule = float, class:(org.pulseaudio.pavucontrol), title:(Volume Control)
-windowrule = float, class:(steam), title:(Steam Settings)
-windowrule = float, class:(steam), title:(Friends List)
-windowrule = float, class:(org.openrgb.OpenRGB), title:(OpenRGB)
-windowrule = float, class:(org.openrgb.OpenRGB), title:(Profile Name)
-windowrule = suppressevent maximize, class:^(firefox)$
-windowrule = workspace 8 silent, class:^(discord)$
-windowrule = fullscreen, class:^(discord)$
-windowrule = workspace 9 silent, class:^(steam)$
-windowrule = float, class:(steam), title:(Friends List)
-windowrule = opacity 0.8 opacity override,class:^(kitty)
-windowrule = float, class:(org.gnome.Calculator), title:(Calculator)
-windowrule = float, class:(com.github.wwmm.easyeffects), title:(Easy Effects)
-
-# LayerRules
-layerrule = blur, rofi
-layerrule = blur, notifications
-layerrule = blur, mako
-layerrule = ignorezero, notifications
+source = ~/.config/hypr/config/env.conf
+source = ~/.config/hypr/config/monitors.conf
+source = ~/.config/hypr/config/hdr.conf
+source = ~/.config/hypr/config/autostart.conf
+source = ~/.config/hypr/config/layout.conf
+source = ~/.config/hypr/config/animations.conf
+source = ~/.config/hypr/config/keybinds.conf
+source = ~/.config/hypr/config/decoration.conf
+source = ~/.config/hypr/config/rules.conf
+source = ~/.config/hypr/config/input.conf
