--- a/private_dot_config/hypr/hyprlock.conf
+++ b/private_dot_config/hypr/hyprlock.conf
@@ -1,7 +1,7 @@
 background {
     monitor =
     # path = /home/jake/Pictures/Wallhaven/wallhaven_2y1m39_3440x1440.png   # supports png, jpg, webp (no animations, though)
-    path = /home/jake/Pictures/Hyprlock/Images/wallhaven_2y1m39_3440x1440.png
+    path = ~/Pictures/Wallpapers/03615_curlcurlbeachsunrise_3440x1440.jpg
     color = rgba(25, 20, 20, 1.0)
 
     # all these options are taken from hyprland, see https://wiki.hyprland.org/Configuring/Variables/#blur for explanations
@@ -16,7 +16,7 @@ background {
 
 image {
     monitor =
-    path = /home/jake/Pictures/Hyprlock/Avatar/ComfyUI_00562_.png
+    path = ~/Pictures/Wallpapers/03681_southernpresidentials_3440x1440.jpg
     size = 150 # lesser side if not 1:1 ratio
     rounding = -1 # negative values mean circle
     border_size = 4
