--- a/private_dot_config/tmux/tmux.conf
+++ b/private_dot_config/tmux/tmux.conf
@@ -24,6 +24,7 @@ set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'janoamaral/tokyo-night-tmux'
+set -g @plugin 'tmux-plugins/tmux-resurrect'
 
 # Tokyo Night Plugin Options
 set -g @tokyo-night-tmux_theme night
