--- a/private_dot_config/waybar/config.jsonc
+++ b/private_dot_config/waybar/config.jsonc
@@ -4,19 +4,19 @@
   "spacing": 0,
   "height": 30,
   "modules-left": [
-    "hyprland/workspaces",
+    "hyprland/workspaces"
   ],
   "modules-center": [
-    "clock",
+    "clock"
   ],
   "modules-right": [
     "custom/easyeffects",
     "cpu",
     "memory",
-    "network",
+    // "network",
     "wireplumber",
     "bluetooth",
-    "tray",
+    "tray"
   ],
   "wlr/taskbar": {
     "format": "{icon}",
@@ -31,24 +31,26 @@
     "format": "{icon}",
     "format-icons": {
       "default": "",
-      "1": "1",
-      "2": "2",
-      "3": "3",
-      "4": "4",
-      "5": "5",
-      "6": "6",
-      "7": "7",
-      "8": "",
-      "9": "",
-      "active": "󱓻",
-      "urgent": "󱓻"
+      "1": "[1] ",
+      "2": "[2] ",
+      "3": "[3] ",
+      "4": "[4] ",
+      "5": "[5]",
+      "6": "[6]",
+      "7": "[7] ",
+      "8": "[8] ",
+      "9": "[9] "
     },
     "persistent_workspaces": {
       "1": [],
       "2": [],
       "3": [],
       "4": [],
-      "5": []
+      "5": [],
+      "6": [],
+      "7": [],
+      "8": [],
+      "9": []
     }
   },
   "cpu": {
@@ -92,11 +94,13 @@
       ]
     },
     "on-click": "pamixer -t",
+    "on-click-middle": "pavucontrol",
     "scroll-step": 1
   },
   "bluetooth": {
     "format": " {status}",
     "format-connected": " {device_alias}",
-    "on-click": "blueman-manager"
-  },
+    "on-click": "blueman-manager",
+    "on-click-middle": "rfkill toggle bluetooth"
+  }
 }
