Update Hypr Dots
- Change rofi to walker

--- a/private_dot_config/hypr/config/autostart.conf
+++ b/private_dot_config/hypr/config/autostart.conf
@@ -32,6 +32,6 @@ exec-once= /opt/piavpn/bin/pia-client --quiet
 exec-once = nm-applet
 exec-once = blueman-applet
 exec-once = xrdb ~/.Xresources
-exec-once = pavucontrol --gapplication-service
+exec-once = walker --gapplication-service # Requires elephant systemd user unit
 exec-once = hypridle
 ##
