--- a/private_dot_config/hypr/config/keybinds.conf
+++ b/private_dot_config/hypr/config/keybinds.conf
@@ -8,7 +8,7 @@
 $META = SUPER
 $terminal = kitty
 $fileManager = kitty -e lf
-$menu = rofi -show
+$menu = walker
 $browser = firefox
 
 bind = $META+SHIFT, Return, exec, $terminal # Launch kitty
