--- a/private_dot_config/hypr/config/autostart.conf
+++ b/private_dot_config/hypr/config/autostart.conf
@@ -11,6 +11,10 @@ exec-once = swww-daemon
 exec-once = $HOME/.local/bin/scripts/swwwslideshow.sh ~/Pictures/Wallpapers
 ##
 
+# Bitwarden Web Fix
+exec-once = $HOME/.local/bin/scripts/bitwardenhypr_fix
+##
+
 # Clipboard
 exec-once = wl-paste --type text --watch cliphist store # Stores only text data
 exec-once = wl-paste --type image --watch cliphist store # Stores only image data
@@ -19,6 +23,7 @@ exec-once = wl-paste --type image --watch cliphist store # Stores only image dat
 # Systemd
 exec-once = systemctl --user start sunshine
 exec-once = systemctl --user start hyprpolkitagent
+exec-once = systemctl --user start elephant
 ##
 
 # Applications
